--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.17.0",
+    "@next/third-parties": "^14.1.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
